--- a/client/css/main.less
+++ b/client/css/main.less
@@ -11,7 +11,7 @@
 @header-height: 48px;
 
 /* Width to avoid warping the elements on next line while resizing the window */
-@base-width: 1120px;
+@base-width: 1190px;
 
 /**
  * Main body definition (no longer needed because of jquery-mobile?)
